compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__incorrect_arity_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 349
expression: "let id = fn(x) { x } id()"

---
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:22
  │
1 │ let id = fn(x) { x } id()
  │                      ^^^^ Expected 1 argument, got 0



